@@ -19,6 +19,7 @@
 StarPU 1.4.0 (svn revision xxxx)
 ==============================================
 New features:
+  * Fault tolerance support with starpu_task_failed().
 
 StarPU 1.3.0 (svn revision xxxx)
 ==============================================
